@@ -114,6 +114,21 @@
                                       </packing>
                                     </child>
                                     <child>
+                                      <object class="GtkCheckButton" id="bg_color_enable">
+                                        <property name="label" translatable="yes">Show background colors of tasks</property>
+                                        <property name="visible">True</property>
+                                        <property name="can_focus">True</property>
+                                        <property name="receives_default">False</property>
+                                        <property name="draw_indicator">True</property>
+                                        <signal name="toggled" handler="on_bg_color_toggled"/>
+                                      </object>
+                                      <packing>
+                                        <property name="expand">False</property>
+                                        <property name="padding">3</property>
+                                        <property name="position">1</property>
+                                      </packing>
+                                    </child>
+                                    <child>
                                       <object class="GtkHBox" id="prefs-hbox1">
                                         <property name="no_show_all">True</property>
                                         <child>
@@ -144,7 +159,7 @@
                                       <packing>
                                         <property name="expand">False</property>
                                         <property name="padding">3</property>
-                                        <property name="position">1</property>
+                                        <property name="position">2</property>
                                       </packing>
                                     </child>
                                   </object>
