@@ -16,6 +16,7 @@
     * Automatic restore a backup XML file if the original XML file could not be loaded
     * Backends were renamed to Synchronization Services, by Anant Gupta
     * Reimplement the tag context menu as a widget, in order to - hopefully - be able to implement an enhanced context menu with, for instance, a color picker.
+    * Background Colors option was moved from View menu into preferences dialog
 
 2012-02-13 Getting Things GNOME! 0.2.9
     * Big refractorization of code, now using liblarch
